tests/reflection_base_non_alias_bad.stderr
tests/reflection_base_non_alias_bad.sl:3:2: error: SL2004: type mismatch
