tests/reflection_base_non_alias_bad.sl
fn main() {
	i32.base()
}
